Checkout: corrige el wrap en el label del step de client, agrega el mensaje de pedido generado correctamente y setea el foco en las observaciones cuando se pasa al step del resumen.

--- a/src/app/components/checkout/checkout.component.scss
+++ b/src/app/components/checkout/checkout.component.scss
@@ -39,4 +39,8 @@
     cursor: pointer;
     height: 60px;
   }
+
+  .cliente-label {
+    white-space: normal;
+  }
 }
